--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>I'm hosted with GitHub Pages.  This page will be a portfolio for Daya Johnson.</p>
 </body>
 </html>
